--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -34,9 +34,9 @@
       </div>
     </div>
     <div class="form-group">
-      <%= form.label :status, class: "form-label" %>
-      <%= form.select :status, options_for_select(Appointment.statuses.keys.map { |status| [status.humanize, status] }, 'scheduled'), { prompt: "Select Status" }, class: "form-control" %>
-    </div>
+        <%= form.label :status, class: "form-label" %>
+        <%= form.select :status, options_for_select( @appointment.aasm.states(permitted: true).map { |status| [status, status] }, @appointment.status), { prompt: "Select Status" }, class: "form-control" %>
+      </div>
     <div class="form-group">
       <%= form.text_area :message, class: "form-control", rows: 4, placeholder: "Message (Optional)" %>
     </div>
