--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,32 +1,51 @@
-<div class="container mt-5 text-center">
-<div class="d-flex justify-content-between align-items-center mb-5">
-  <h1>Appointments Calendar</h1>
-  <% if current_user.role == 'doctor' %>
-    <div>
-      <%= button_to 'Delete All Appointments', delete_all_user_appointments_path, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete all appointments?' } %>
-    </div>
-  <%else%>
-      <%= link_to 'New Appointment', new_user_appointment_path(@user), class: 'btn btn-primary' %>
-  <% end %>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Appointments Calendar</title>
+</head>
 
-
+<body 
   
-  <%= month_calendar(events: @appointments) do |date, appointments| %>
-    <div class="day">
-      <%= date.day %>
+  
+  <% if current_user.role == 'doctor' %>
+    data-doctor-id="<%= current_user.id %>" 
+  <% elsif current_user.role == 'patient' %>
+    data-patient-id="<%= current_user.id %>" 
+  <% else %>
+    data-oas-id="<%= current_user.id %>" 
+    data-role="<%= current_user.role %>" 
+    <%# `@user` can be doctor or patient based on what OAS is viewing %>
+    data-doctor-id="<%= @user.try(:id) if @user.is_a?(Doctor) %>" 
+    data-patient-id="<%= @user.try(:id) if @user.is_a?(Patient) %>" 
+  <% end %>
+>
+
+
+  <div class="container mt-5 text-center" id="calender">
+    <div class="d-flex justify-content-between align-items-center mb-5">
+      <h1>Appointments Calendar</h1>
+      <% if current_user.role == 'doctor' %>
+        <div>
+          <%= button_to 'Delete All Appointments', delete_all_user_appointments_path, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete all appointments?' } %>
+        </div>
+      <% elsif current_user.role == 'patient' %>
+        <%= link_to 'New Appointment', new_user_appointment_path(@user), class: 'btn btn-primary' %>
+      <% end %>
     </div>
-    <% appointments.each do |appointment| %>
-      <div >
-     
-    
-          <p >
-             <%= link_to appointment.status, user_appointment_path(@user, appointment) %>
-     
-          </p>
- 
-        
+
+    <%= month_calendar(events: @appointments) do |date, appointments| %>
+      <div class="day" data-date="<%= date.to_s(:db) %>">
+        <%= date.day %>
+        <% appointments.each do |appointment| %>
+          <div id="appointment_<%= appointment.id %>">
+            <p>
+              <%= link_to appointment.status, user_appointment_path(@user, appointment) %>
+            </p>
+          </div>
+        <% end %>
       </div>
     <% end %>
-  <% end %>
-</div>
+  </div>
+
+</body>
+</html>
