--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -34,10 +34,6 @@
       </div>
     </div>
     <div class="form-group">
-      <%= form.label :status, class: "form-label" %>
-      <%= form.select :status, options_for_select(Appointment.statuses.keys.map { |status| [status.humanize, status] }, 'scheduled'), { prompt: "Select Status" }, class: "form-control" %>
-    </div>
-    <div class="form-group">
       <%= form.text_area :message, class: "form-control", rows: 4, placeholder: "Message (Optional)" %>
     </div>
     <%= form.submit 'Create Appointment', class: "btn btn-primary" %>
@@ -53,6 +49,7 @@
     function fetchAvailableDoctors() {
       var startTime = startTimeField.value;
       var endTime = endTimeField.value;
+      console.log(startTime,endTime);
 
       if (startTime && endTime) {
         var userId = <%= current_user.id %>; // Ensure this Ruby code outputs the current user's ID
