--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,12 +16,12 @@
 
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true %>
+          <%= f.text_field :name, class: "form-control", autofocus: true , required: true, minlength: 3, maxlength: 20  %>
         </div>
 
         <div class="form-group">
           <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
+          <%= f.email_field :email, class: "form-control", autocomplete: "email", required: true %>
         </div>
 
 
@@ -41,7 +41,7 @@
 
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
-          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
+          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control", required: true %>
         </div>
 
         <%= f.hidden_field :role, value: 'owner' %>
@@ -50,7 +50,7 @@
 
         <div class="form-group">
           <%= f.label :hospital_name, "Hospital Name", class: 'form-label' %>
-          <%= f.text_field :hospital_name, class: 'form-control', placeholder: 'Hospital Name', required: true %>
+          <%= f.text_field :hospital_name, class: 'form-control', placeholder: 'Hospital Name', required: true,, minlength: 3, maxlength: 20  %>
         </div>
 
         <div class="form-group mt-3">
