--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -24,6 +24,9 @@
   <li class="nav-item">
     <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
   </li>
+  <li class="nav-item">
+        <%= link_to "Register as a Patient", new_patient_path, class: "nav-link" %>
+  </li>
 <% end %>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
