--- a/app/views/medical_records/index.html.erb
+++ b/app/views/medical_records/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Medical Records</h1>
+<%if current_user.role == 'doctor'%>
     <%= link_to 'Create Medical Record', new_user_medical_record_path(@patient), class: 'btn btn-primary' %>
-  </div>
+ <%end%>
+      </div>
   <% if @medical_records.any? %>
     <table class="table">
       <thead>
