--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Appointments Calendar</title>
+  <title><%=t 'appointments.calendar'%></title>
 </head>
 
 <body 
@@ -23,13 +23,13 @@
 
   <div class="container mt-5 text-center" id="calender">
     <div class="d-flex justify-content-between align-items-center mb-5">
-      <h1>Appointments Calendar</h1>
+      <h1><%=t 'appointments.calendar'%></h1>
       <% if current_user.role == 'doctor' %>
         <div>
-          <%= button_to 'Delete All Appointments', delete_all_user_appointments_path, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete all appointments?' } %>
+          <%= button_to t('appointments.delete_all'), delete_all_user_appointments_path, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete all appointments?' } %>
         </div>
       <% elsif current_user.role == 'patient' %>
-        <%= link_to 'New Appointment', new_user_appointment_path(@user), class: 'btn btn-primary' %>
+        <%= link_to t('appointments.new'), new_user_appointment_path(@user), class: 'btn btn-primary' %>
       <% end %>
     </div>
 
