--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,35 +1,34 @@
-<h1 class="mb-4">Appointments</h1>
+<h1 class="mb-4"><%= t('appointments.title') %></h1>
 
 <% if @appointment.present? %>
   <table class="table table-striped table-bordered">
     <thead class="thead-dark">
       <tr>
-        <th>Start Time</th>
-        <th>End Time</th>
-        <th>Status</th>
-        <th><%= current_user.role == 'patient' ? 'Doctor' : 'Patient' %></th>
-        <th>Actions</th>
+        <th><%= t('appointments.start_time') %></th>
+        <th><%= t('appointments.end_time') %></th>
+        <th><%= t('appointments.status') %></th>
+        <th><%= current_user.role == 'patient' ? t('appointments.doctor') : t('appointments.patient') %></th>
+        <th><%= t('appointments.actions') %></th>
       </tr>
     </thead>
     <tbody>
 
       <tr>
-        <td><%= @appointment.startTime.strftime('%Y-%m-%d %H:%M') %></td>
+    <td><%= @appointment.startTime.strftime('%Y-%m-%d %H:%M') %></td>
         <td><%= @appointment.endTime.strftime('%Y-%m-%d %H:%M') %></td>
-        <td><%= @appointment.status %></td>
+        <td><%= t("appointments.statuses.#{@appointment.status}") %></td>
         <td><%= current_user.role == 'patient' ? @appointment.doctor.name : @appointment.patient.name %></td>
         <td>
           <div class="row">
             <div class="col-md-2">
           <%if @appointment.status != 'completed'%>
-          <%= link_to edit_user_appointment_path(current_user, @appointment), class: 'btn btn-sm btn-warning', title: 'Edit' do %>
+          <%= link_to edit_user_appointment_path(current_user, @appointment), class: 'btn btn-sm btn-warning', title: t('appointments.edit') do %>
             <i class="bi bi-pencil"></i>
           <% end %>
           <%end%>
           </div>
           <div class="col-md-2">
-          <%= button_to user_appointment_path(current_user, @appointment), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger', title: 'Delete' do %>
-            <i class="bi bi-trash"></i>
+<%= button_to user_appointment_path(current_user, @appointment), method: :delete, data: { confirm: t('appointments.confirm_delete') }, class: 'btn btn-sm btn-danger', title: t('appointments.delete') do %>            <i class="bi bi-trash"></i>
           <% end %>
           </div>
           </div>
@@ -38,5 +37,5 @@
     </tbody>
   </table>
 <% else %>
-  <p class="alert alert-info">No appointments found.</p>
+  <p class="alert alert-info"><%= t('appointments.no_appointments') %></p>
 <% end %>
