Add Comment to all users

--- a/app/views/comment_mailer/comment_notification.html.erb
+++ b/app/views/comment_mailer/comment_notification.html.erb
@@ -4,11 +4,10 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>New Comment Added to Your Medical Record</h1>
-    <p>Hello <%= @patient.name %>,</p>
-    <p>A new comment has been added to your medical record:</p>
+    <h1>New Comment Added</h1>
+    <p>Hello <%= @user.name %>,</p>
+    <p>A new comment has been added :</p>
     <p><%= @comment.description %></p>
-    <p>Regards,</p>
-    <p>Your Medical Team</p>
+    <p>Have a nice day!</p>
   </body>
 </html>
