--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -8,6 +8,21 @@
     <p>
       You have been successfully added to our system.
     </p>
+    <p><strong>Your login details are as follows:</strong></p>
+    <ul>
+      <li><strong>Email:</strong> <%= @user.email %></li>
+      <li><strong>Password:</strong> <%= @user.password %></li>
+    </ul>
+    <p>
+      You can access your account and manage your details by visiting the following link:
+    </p>
+  <p>
+  
+
+</p>
+
+
     <p>Thank you for joining us!</p>
   </body>
 </html>
+
