--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,7 +50,7 @@
 
         <div class="form-group">
           <%= f.label :hospital_name, "Hospital Name", class: 'form-label' %>
-          <%= f.text_field :hospital_name, class: 'form-control', placeholder: 'Hospital Name', required: true,, minlength: 3, maxlength: 20  %>
+          <%= f.text_field :hospital_name, class: 'form-control', placeholder: 'Hospital Name', required: true, minlength: 3, maxlength: 20  %>
         </div>
 
         <div class="form-group mt-3">
