--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -51,7 +51,11 @@
             <%= detail_form.text_field :qualification, class: 'form-control', required: true %>
           </div>
         <% end %>
-
+         <% unless @doctor.new_record? %>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+          <i class="bi bi-plus-circle"></i> <%= t('medical_records.add_comment') %>
+        </button>
+      <% end %>
         <div class="form-group text-center mt-5">
           <%= f.submit @doctor.new_record? ? 'Create Doctor' : 'Update Doctor', class: 'btn btn-primary btn-block' %>
         </div>
@@ -59,3 +63,32 @@
     </div>
   </div>
 </div>
+
+<!-- Add Comment Modal -->
+ <% unless @doctor.new_record? %>
+<div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCommentModalLabel"><%= t('medical_records.add_comment') %></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      <%= form_with(model: [@doctor, Comment.new], url: doctor_comments_path(@doctor), method: :post, html: { id: 'new_comment_form' }) do |f| %>
+          <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: 'form-control', required: true %>
+            <div class="invalid-feedback">
+              <%= t('comments.description_error') %>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <%= f.submit t('comments.add_button'), class: 'btn btn-primary' %>
+          </div>
+        
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+ <% end %>
