--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -48,7 +48,11 @@
           <% end %>
           <%= f.select :role, options_for_select(role_options, f.object.role), { prompt: 'Select a role' }, class: "form-control", required: true %>
         </div>
-
+        <% unless @user.new_record?  %>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCommentModal">
+          <i class="bi bi-plus-circle"></i> <%= t('medical_records.add_comment') %>
+        </button>
+      <% end %>
         <div class="form-group text-center mt-4">
           <%= f.submit @user.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' %>
         </div>
@@ -56,3 +60,31 @@
     </div>
   </div>
 </div>
+
+<% unless @user.new_record? %>
+<div class="modal fade" id="addCommentModal" tabindex="-1" aria-labelledby="addCommentModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addCommentModalLabel"><%= t('medical_records.add_comment') %></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      <%= form_with(model: [@user, Comment.new], url: user_comments_path(@user), method: :post, html: { id: 'new_comment_form' }) do |f| %>
+          <div class="form-group">
+            <%= f.label :description %>
+            <%= f.text_area :description, class: 'form-control', required: true %>
+            <div class="invalid-feedback">
+              <%= t('comments.description_error') %>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <%= f.submit t('comments.add_button'), class: 'btn btn-primary' %>
+          </div>
+        
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+ <% end %>
